# robotic-arm-ik-comparison

./: CMakeLists.txt  LICENSE  README.md  training_config.yaml
cpp/: benchmark.cpp  main.cpp  ml_demo.cpp
cpp/control/: ControlLoop.cpp  ControlLoop.h
cpp/kinematics/: Kinematics.cpp  Kinematics.h
cpp/ml_inference/: MLInference.cpp  MLInference.h
cpp/planning/: ObstacleChecker.cpp  ObstacleChecker.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h
data/: benchmark_results.csv  test.csv  val.csv
models/: ik_model.onnx  ik_model.onnx.data  ik_model.pth
python/: benchmark_charts.py  dataset_generator.py  train_model.py  visualize.py
tests/: test_kinematics.cpp
